--- a/package.json
+++ b/package.json
@@ -2,20 +2,27 @@
   "name": "nebula",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "client:start": "react-scripts start",
+    "client:build": "react-scripts build",
+    "client:test": "react-scripts test",
+    "client:eject": "react-scripts eject",
+    "dev": "concurrently \"npm run client:start\" \"cd src-tauri/ && cargo tauri dev\"",
+    "prod": "concurrently \"npm run client:build\" \"cd src-tauri/ && cargo tauri build\""
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "concurrently": "^7.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "sass": "^1.54.2",
+    "serve": "^14.0.1"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +41,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "author": {
+    "name": "Gourav Khator"
+  },
+  "repository": {
+    "url": "https://github.com/gouravkhator/nebula"
+  },
+  "bugs": {
+    "url": "https://github.com/gouravkhator/nebula/issues"
+  },
+  "license": "Apache-2.0"
 }
