--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -3,7 +3,7 @@ name = "nebula"
 version = "0.1.0"
 description = "Nebula - A Pre-Configured Code Editor to keep you focused into dev rather than environment setup"
 authors = ["Gourav Khator"]
-license = ""
+license = "Apache-2.0"
 repository = ""
 default-run = "nebula"
 edition = "2021"
